# looptactics

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  gtest.patch  main.cc
.circleci/: config.yml
docs/: CMakeLists.txt  Doxyfile.in
haystack/: Access.cpp  Access.h  Definitions.h  HayStack.cpp  HayStack.h  Program.cpp  Program.h
islutils/: .clang-tidy  Doxyfile  access-inl.h  access.cc  access.h  access_patterns.cc  access_patterns.h  access_processor.cc  access_processor.h  aff_op.h  builders.cc  builders.h  common.cc  common.h  cout_overloading.h  cpu.cc  cpu.h  ctx.h  die.h  error.h  feedback_definition.h  haystack_runner.cc  haystack_runner.h  highlighter.cc  highlighter.h  locus-inl.h  locus.h  loop_opt.cc  loop_opt.h  mainwindow.cc  mainwindow.h  matchers-inl.h  matchers.cc  matchers.h  operators.h  parser.cc  parser.h  pet_wrapper.cc  pet_wrapper.h  program.cc  (+13 more)
test/: CMakeLists.txt  main.cpp  test_access.cc  test_builders.cc  test_ctx_alloc.cc  test_haystack.cc  test_language.cc  test_matcher.cc  test_old_language.cc  test_parser.cc  test_parser_new.cc  test_set_maker.cc  test_stencils.cc  test_synthesis.cc  test_transformer.cc
test/inputs/: 1mmWithoutInitStmt.c  1mm_fused.c  2mm.c  3mm.c  atax.c  bicg.c  doubleStmtGemm.c  gemm.c  gemver.c  haystack_gemm.cc  mvt.c  nested.c  non_parallel.c  parallel.c  placeholder_assignment.c  pointWise.c  stencil.c  stencilMix.c  stencil_five_points.c  strided_domain.c  strided_domain_distance.c  strided_domain_multi_dimensions.c  strided_domain_with_coefficients.c
